--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-18.04
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
         with:
@@ -21,7 +21,7 @@ jobs:
           extended: true
 
       - name: Build
-        run: hugo --minify --baseURL=https://mauget.github.io/GitHubPages
+        run: hugo --minify --baseURL=https://mauget.github.io
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
