--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,3 @@
-
 name: github pages
 
 on:
@@ -21,7 +20,7 @@ jobs:
           extended: true
 
       - name: Build
-        run: hugo --minify --baseURL=https://mauget.github.io
+        run: hugo --minify --baseURL=https://github.com/mauget/acme-corporation
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
