--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -20,7 +20,7 @@ jobs:
           extended: true
 
       - name: Build
-        run: hugo --minify --baseURL=https://github.com/mauget/acme-corporation
+        run: hugo --minify --baseURL=https://mauget.github.io/GitHubPages
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
