Rebuid after fixing yml error

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-:languageCode: en-us                           # Locale
+languageCode: en-us                           # Locale
 title: Acme Corporation                       # Name of the website
 theme: Eclectic                               # Name of the theme
 author:                                       # Information about the website author
