--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 languageCode: en-us                           # Locale
 title: Acme Corporation                       # Name of the website
-theme: Eclectic                               # Name of the theme
+theme: hugo-universal-theme                   # Name of the theme
 author:                                       # Information about the website author
   facebook: "https://facebook.com/example"
   twitter: "https://twitter.com/example"
